--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=tienda
 server.port=80
+
+#Eliminar el mensaje invasivo de spring
+spring.main.banner-mode=off
+
+#Para definir el formato de despliege de fecha/hora de los logs en la consola.
+logging.pattern.dateformat=hh:m
+
+
