Agregando el start-class en pom y editando una variable

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Proyecto hecho en clase Web y Patrones</description>
     <properties>
         <java.version>22</java.version>
+        <start-class>com.tienda.TiendaApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
